syntax = "proto3";
package secretsmanagerplugin;

option go_package = "./;secretsmanagerplugin";

message SecretsRequest {
    int64 orgId = 1;
    string namespace = 2;
    string type = 3;
    string newNamespace = 4;
    string value = 5;
}

message Key {
    int64 orgId = 1;
    string namespace = 2;
    string type = 3;
}

message SecretsErrorResponse {
    string error = 1;
}

message SecretsGetResponse {
    string error = 1;
    string decryptedValue = 2;
    bool exists = 3;  
}

message SecretsKeysResponse {
    string error = 1;
    repeated Key keys = 2;
}

service RemoteSecretsManager {
    rpc Get(SecretsRequest) returns (SecretsGetResponse);
    rpc Set(SecretsRequest) returns (SecretsErrorResponse);
    rpc Del(SecretsRequest) returns (SecretsErrorResponse);
    rpc Keys(SecretsRequest) returns (SecretsKeysResponse);
    rpc Rename(SecretsRequest) returns (SecretsErrorResponse);
}
  